# Resume-Shortlisting

./: Dependencies.txt  README.md  pyproject.toml
Convert_To_pdf/: Convert_file.sh  test.docx
scripts/: Convert_file.sh
