[project]
name = "resume-shortlisting"
version = "0.1.0"
description = ""
authors = [
    {name = "Jake",email = "jakeroberts.a.05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "pymysql (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
